resources/style.css
/* ... */
/*************************** winner modal **************************/




.winnerModal {
    height: 100vh;
    width: 100vw;
    border: 1px solid black;
    display: none;
    background-image: url('images/backgrounds/background6.gif');
    background-repeat: no-repeat;
    background-size: cover;
    position: relative;
}

.modal{
    border: 1px solid black;
}

.winningCharacter{
    top: 10%;
    left: 10%;
    width: 25vw;
    height: 80vh;
    position: absolute;
    animation: spin 4s infinite;
    animation-timing-function: cubic-bezier(0.1, 0.2, 0.3, 1.5);
    animation-iteration-count: 1;
    transform-style: preserve-3d;
    background-repeat: no-repeat;
    background-position: center;
    background-size: contain;
}

.winningCharacter img{
    width: 100%;
    height: 100%;
}

.chuckNorrisQuote{
    top: 25%;
    left: 40%;
    width: 50vw;
    height: 40vh;
    border: 1px solid;
    border-radius: 20px;
    position: absolute;
    background-color: rgba(0,0,0,0.6);
    padding: 1%;
}

.chuckNorrisQuote p {
    position: absolute;
    top: 50%;
    left: 50%;
    width: 100%;
    transform: translate(-50%, -50%);
    font-size: 5vmin;
    font-family: fighting;
    color: white;
    letter-spacing: 2px;
    text-align: center;
    margin: 0;
}

.restart {
    top: 70%;
    left: 70%;
    height: 10vh;
    position: absolute;
}

.playAgain:focus{
    outline: none;
}

.playAgain:active{
    transform: translateY(5px);
}
.playAgain:hover{
    color: red;
    text-shadow: 0px 0px 20px white;
}

.playAgain{
    border: 0px solid;
    height: 100%;
    font-family: ss4;
    font-size: 5vmin;
    background-color: rgba(0,0,0,0);
    color: white;
    box-shadow: none;
    text-shadow: 0px 0px 20px black;
    cursor: pointer;
}



/*********************** Ready modal ************************/




.readyBanner {
  width: 100vw;
  height: 25vh;
  border-top: 7px solid darkred;
  border-bottom: 7px solid darkred;
  background-color: red;
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  display: none;
  box-shadow: 0px 0px 120px black;
}

.readyButton {
  width: 40vh;
  height: 30vh;
  border: 7px solid darkred;
  background-color: red;
  border-radius: 47%;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%,-50%);
  color: white;
  font-family: fighting, ss4;
  text-align: center;
  padding-top: 0vh;
  font-size: 11vh;
  text-shadow: 3px 3px 13px black;
  box-shadow: 0px 0px 60px black;
  user-select: none;
  cursor: pointer;
}

.readyButton:hover {
  border: 7px solid yellow;
}


/*=============== Load Screen ==================*/

.loadScreen {
  background-image: url('images/backgrounds/particleBG.gif');
  width: 100vw;
  height: 100vh;
  background-color: #475eff;
  text-align: center;
}

.loadingTitle {
  color: yellow;
  text-shadow: 0 0 20px black;
  font-family: ss4;
  font-size: 10vmin;
  position: relative;
  top: 10vh;
}

.loadingBarContainer {
  border: 4px solid black;
  position: absolute;
  top: 50%;
  left: 50%;
  width: 50vw;
  border-radius: 5px;
  height: 10vh;
  transform: translate(-50%,-50%);
}

.loadingBar {
  position: relative;
  left: 0;
  top: 0;
  height: 100%;
  width: 10%;
  background-color: red;
}

.loading-error{
    font-family: fighting;
    color: #c5c523;
    text-shadow: 1px 1px black,
                -1px -1px black,
                -1px 1px black,
                1px -1px black;
    letter-spacing: 4px;
    display: none;
}
/************MISC********************/
.hide{
    display: none;
}

/************MISC********************/

@media screen and (orientation: portrait) {

    .warning{
        display: block;
    }
}

